sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:17: error: not found: value etst2
    etst2=true
    ^