sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.code
def cocktailSort3() {
  var debut=1
  var fin=getNombreValeurs()-1
  var test1=false
  var test2=false
  while (!test1){
    test1 = true
    for (i <- debut to fin){
      if(plusPetit(i,i-1)){
        test1 = false
        echange(i-1,i)
      }
    }
  }
  while (!test2){
    etst2=true
    fin -=1
    for (i <- fin to debut by -1) {
        if (plusPetit(i,i-1)){
        test2 = false
        echange(i-1,i)
    }
    }
    debut+=1
  }
}